deploy: aafe50795817801c276542acc4f77b250c9076b9

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90f4226e",
+   "id": "c7428a26",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef7483de",
+   "id": "6442c322",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84022134",
+   "id": "1c44b185",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2d84e77",
+   "id": "30fa8d5e",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "505d477e",
+   "id": "6d51b396",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72a1fa0c",
+   "id": "683af09b",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4ed6e8db",
+   "id": "84a567cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:08.946711Z",
-     "iopub.status.busy": "2025-01-27T18:57:08.946279Z",
-     "iopub.status.idle": "2025-01-27T18:57:13.708622Z",
-     "shell.execute_reply": "2025-01-27T18:57:13.708045Z"
+     "iopub.execute_input": "2025-01-28T08:01:20.043667Z",
+     "iopub.status.busy": "2025-01-28T08:01:20.043223Z",
+     "iopub.status.idle": "2025-01-28T08:01:24.422824Z",
+     "shell.execute_reply": "2025-01-28T08:01:24.422180Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acbef296",
+   "id": "4175fd01",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec03707f",
+   "id": "c0e82bd2",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b153175e",
+   "id": "a568ae12",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df259f4a",
+   "id": "d4007fd9",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b0bddbf",
+   "id": "00dd7a80",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d854bae4",
+   "id": "5ec4b564",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f876c190",
+   "id": "cd061e81",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b921c02",
+   "id": "f12f72bc",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "00b9a3bb",
+   "id": "9ba57d7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:13.711120Z",
-     "iopub.status.busy": "2025-01-27T18:57:13.710622Z",
-     "iopub.status.idle": "2025-01-27T18:57:15.877190Z",
-     "shell.execute_reply": "2025-01-27T18:57:15.876624Z"
+     "iopub.execute_input": "2025-01-28T08:01:24.425056Z",
+     "iopub.status.busy": "2025-01-28T08:01:24.424769Z",
+     "iopub.status.idle": "2025-01-28T08:01:26.365532Z",
+     "shell.execute_reply": "2025-01-28T08:01:26.364900Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "501a4620",
+   "id": "116e5a6a",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7c98bf2b",
+   "id": "ab9497d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:15.879376Z",
-     "iopub.status.busy": "2025-01-27T18:57:15.878982Z",
-     "iopub.status.idle": "2025-01-27T18:57:15.882565Z",
-     "shell.execute_reply": "2025-01-27T18:57:15.881854Z"
+     "iopub.execute_input": "2025-01-28T08:01:26.367458Z",
+     "iopub.status.busy": "2025-01-28T08:01:26.367225Z",
+     "iopub.status.idle": "2025-01-28T08:01:26.370718Z",
+     "shell.execute_reply": "2025-01-28T08:01:26.370119Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac510a15",
+   "id": "952b35a0",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b7c4f9",
+   "id": "27be9fe5",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6e82b84",
+   "id": "459536e2",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34906189",
+   "id": "83d2b1a2",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "baee8202",
+   "id": "620f824c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:15.884510Z",
-     "iopub.status.busy": "2025-01-27T18:57:15.884157Z",
-     "iopub.status.idle": "2025-01-27T18:57:15.931791Z",
-     "shell.execute_reply": "2025-01-27T18:57:15.931282Z"
+     "iopub.execute_input": "2025-01-28T08:01:26.372624Z",
+     "iopub.status.busy": "2025-01-28T08:01:26.372183Z",
+     "iopub.status.idle": "2025-01-28T08:01:26.417606Z",
+     "shell.execute_reply": "2025-01-28T08:01:26.417067Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2502090f",
+   "id": "e12aed94",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2a41db0",
+   "id": "c14d7e48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:15.933655Z",
-     "iopub.status.busy": "2025-01-27T18:57:15.933468Z",
-     "iopub.status.idle": "2025-01-27T18:57:16.008990Z",
-     "shell.execute_reply": "2025-01-27T18:57:16.008405Z"
+     "iopub.execute_input": "2025-01-28T08:01:26.419288Z",
+     "iopub.status.busy": "2025-01-28T08:01:26.419120Z",
+     "iopub.status.idle": "2025-01-28T08:01:26.487648Z",
+     "shell.execute_reply": "2025-01-28T08:01:26.487105Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4730a4d9",
+   "id": "555b0c33",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a2e8c0d",
+   "id": "280920b6",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f6cc2e3e",
+   "id": "fb602dbe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:16.011150Z",
-     "iopub.status.busy": "2025-01-27T18:57:16.010777Z",
-     "iopub.status.idle": "2025-01-27T18:57:16.043748Z",
-     "shell.execute_reply": "2025-01-27T18:57:16.043167Z"
+     "iopub.execute_input": "2025-01-28T08:01:26.489613Z",
+     "iopub.status.busy": "2025-01-28T08:01:26.489226Z",
+     "iopub.status.idle": "2025-01-28T08:01:26.519130Z",
+     "shell.execute_reply": "2025-01-28T08:01:26.518605Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e689bc3",
+   "id": "d198d066",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f75ed6a3",
+   "id": "365dd8f1",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be3a2d18",
+   "id": "2fa0a76e",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db870021",
+   "id": "792a0897",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7dcd130",
+   "id": "e559704d",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ddd4bf19",
+   "id": "d0de65dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:16.045746Z",
-     "iopub.status.busy": "2025-01-27T18:57:16.045553Z",
-     "iopub.status.idle": "2025-01-27T18:57:16.049791Z",
-     "shell.execute_reply": "2025-01-27T18:57:16.049227Z"
+     "iopub.execute_input": "2025-01-28T08:01:26.521397Z",
+     "iopub.status.busy": "2025-01-28T08:01:26.520823Z",
+     "iopub.status.idle": "2025-01-28T08:01:26.525115Z",
+     "shell.execute_reply": "2025-01-28T08:01:26.524462Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc96bcba",
+   "id": "4e23f158",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6153501d",
+   "id": "85cd2b99",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:16.051813Z",
-     "iopub.status.busy": "2025-01-27T18:57:16.051349Z",
-     "iopub.status.idle": "2025-01-27T18:57:16.054456Z",
-     "shell.execute_reply": "2025-01-27T18:57:16.053943Z"
+     "iopub.execute_input": "2025-01-28T08:01:26.526933Z",
+     "iopub.status.busy": "2025-01-28T08:01:26.526560Z",
+     "iopub.status.idle": "2025-01-28T08:01:26.529634Z",
+     "shell.execute_reply": "2025-01-28T08:01:26.529132Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d626d902",
+   "id": "ebfd8834",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7d5a0b8c",
+   "id": "fc52ba89",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:16.056297Z",
-     "iopub.status.busy": "2025-01-27T18:57:16.056114Z",
-     "iopub.status.idle": "2025-01-27T18:57:18.741966Z",
-     "shell.execute_reply": "2025-01-27T18:57:18.741327Z"
+     "iopub.execute_input": "2025-01-28T08:01:26.531413Z",
+     "iopub.status.busy": "2025-01-28T08:01:26.531048Z",
+     "iopub.status.idle": "2025-01-28T08:01:29.165880Z",
+     "shell.execute_reply": "2025-01-28T08:01:29.165261Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b9abc8d",
+   "id": "25a3ef1b",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2585cdfe",
+   "id": "c60a8c80",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd8dfc9",
+   "id": "fb803e5e",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51e59798",
+   "id": "752fad7b",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bd366535",
+   "id": "1fd45038",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:18.744114Z",
-     "iopub.status.busy": "2025-01-27T18:57:18.743891Z",
-     "iopub.status.idle": "2025-01-27T18:57:18.747734Z",
-     "shell.execute_reply": "2025-01-27T18:57:18.747130Z"
+     "iopub.execute_input": "2025-01-28T08:01:29.167916Z",
+     "iopub.status.busy": "2025-01-28T08:01:29.167544Z",
+     "iopub.status.idle": "2025-01-28T08:01:29.171117Z",
+     "shell.execute_reply": "2025-01-28T08:01:29.170636Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fc058059c60>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f59a01bf560>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "216c6c6b",
+   "id": "44dec055",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "601ca40f",
+   "id": "e18afa4f",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1af2808",
+   "id": "eacc700e",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aea31417",
+   "id": "ebb153f9",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "843e98c8",
+   "id": "58b67b07",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:18.749598Z",
-     "iopub.status.busy": "2025-01-27T18:57:18.749258Z",
-     "iopub.status.idle": "2025-01-27T18:57:18.752464Z",
-     "shell.execute_reply": "2025-01-27T18:57:18.751761Z"
+     "iopub.execute_input": "2025-01-28T08:01:29.173035Z",
+     "iopub.status.busy": "2025-01-28T08:01:29.172622Z",
+     "iopub.status.idle": "2025-01-28T08:01:29.175616Z",
+     "shell.execute_reply": "2025-01-28T08:01:29.175031Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c74f8f0a",
+   "id": "a48e23e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-27T18:57:18.754373Z",
-     "iopub.status.busy": "2025-01-27T18:57:18.753932Z",
-     "iopub.status.idle": "2025-01-27T18:57:19.831360Z",
-     "shell.execute_reply": "2025-01-27T18:57:19.830744Z"
+     "iopub.execute_input": "2025-01-28T08:01:29.177408Z",
+     "iopub.status.busy": "2025-01-28T08:01:29.177050Z",
+     "iopub.status.idle": "2025-01-28T08:01:30.231342Z",
+     "shell.execute_reply": "2025-01-28T08:01:30.230788Z"
     }
    },
    "outputs": [
