deploy: cc50a460c46fa1660b3be199c845cfd48286c9af

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c7428a26",
+   "id": "f04bfda1",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6442c322",
+   "id": "5c443567",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c44b185",
+   "id": "62943b93",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30fa8d5e",
+   "id": "71e0d6f1",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d51b396",
+   "id": "5690cf0c",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "683af09b",
+   "id": "6a8c9ad3",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "84a567cf",
+   "id": "b5ba0380",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:20.043667Z",
-     "iopub.status.busy": "2025-01-28T08:01:20.043223Z",
-     "iopub.status.idle": "2025-01-28T08:01:24.422824Z",
-     "shell.execute_reply": "2025-01-28T08:01:24.422180Z"
+     "iopub.execute_input": "2025-01-28T10:40:18.372982Z",
+     "iopub.status.busy": "2025-01-28T10:40:18.372805Z",
+     "iopub.status.idle": "2025-01-28T10:40:22.694119Z",
+     "shell.execute_reply": "2025-01-28T10:40:22.693494Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4175fd01",
+   "id": "9170317d",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0e82bd2",
+   "id": "5a1b0e22",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a568ae12",
+   "id": "14e66ca5",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4007fd9",
+   "id": "efb5aad3",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00dd7a80",
+   "id": "92177b17",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec4b564",
+   "id": "151f3e06",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd061e81",
+   "id": "6c9acab4",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f12f72bc",
+   "id": "9fca16fc",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9ba57d7e",
+   "id": "a0b076f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:24.425056Z",
-     "iopub.status.busy": "2025-01-28T08:01:24.424769Z",
-     "iopub.status.idle": "2025-01-28T08:01:26.365532Z",
-     "shell.execute_reply": "2025-01-28T08:01:26.364900Z"
+     "iopub.execute_input": "2025-01-28T10:40:22.696437Z",
+     "iopub.status.busy": "2025-01-28T10:40:22.695892Z",
+     "iopub.status.idle": "2025-01-28T10:40:24.618900Z",
+     "shell.execute_reply": "2025-01-28T10:40:24.618355Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116e5a6a",
+   "id": "1cb9e068",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ab9497d4",
+   "id": "0b8f9317",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:26.367458Z",
-     "iopub.status.busy": "2025-01-28T08:01:26.367225Z",
-     "iopub.status.idle": "2025-01-28T08:01:26.370718Z",
-     "shell.execute_reply": "2025-01-28T08:01:26.370119Z"
+     "iopub.execute_input": "2025-01-28T10:40:24.620907Z",
+     "iopub.status.busy": "2025-01-28T10:40:24.620536Z",
+     "iopub.status.idle": "2025-01-28T10:40:24.624238Z",
+     "shell.execute_reply": "2025-01-28T10:40:24.623737Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952b35a0",
+   "id": "e41719f6",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27be9fe5",
+   "id": "dc00a906",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "459536e2",
+   "id": "c60c6f9d",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83d2b1a2",
+   "id": "014cff80",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "620f824c",
+   "id": "0e7f2b2a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:26.372624Z",
-     "iopub.status.busy": "2025-01-28T08:01:26.372183Z",
-     "iopub.status.idle": "2025-01-28T08:01:26.417606Z",
-     "shell.execute_reply": "2025-01-28T08:01:26.417067Z"
+     "iopub.execute_input": "2025-01-28T10:40:24.625906Z",
+     "iopub.status.busy": "2025-01-28T10:40:24.625742Z",
+     "iopub.status.idle": "2025-01-28T10:40:24.671891Z",
+     "shell.execute_reply": "2025-01-28T10:40:24.671379Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e12aed94",
+   "id": "b244633f",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c14d7e48",
+   "id": "a31d944a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:26.419288Z",
-     "iopub.status.busy": "2025-01-28T08:01:26.419120Z",
-     "iopub.status.idle": "2025-01-28T08:01:26.487648Z",
-     "shell.execute_reply": "2025-01-28T08:01:26.487105Z"
+     "iopub.execute_input": "2025-01-28T10:40:24.673770Z",
+     "iopub.status.busy": "2025-01-28T10:40:24.673571Z",
+     "iopub.status.idle": "2025-01-28T10:40:24.742985Z",
+     "shell.execute_reply": "2025-01-28T10:40:24.742469Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "555b0c33",
+   "id": "de1a1bbb",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "280920b6",
+   "id": "7b134324",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fb602dbe",
+   "id": "1f60dc0f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:26.489613Z",
-     "iopub.status.busy": "2025-01-28T08:01:26.489226Z",
-     "iopub.status.idle": "2025-01-28T08:01:26.519130Z",
-     "shell.execute_reply": "2025-01-28T08:01:26.518605Z"
+     "iopub.execute_input": "2025-01-28T10:40:24.745113Z",
+     "iopub.status.busy": "2025-01-28T10:40:24.744740Z",
+     "iopub.status.idle": "2025-01-28T10:40:24.774042Z",
+     "shell.execute_reply": "2025-01-28T10:40:24.773467Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d198d066",
+   "id": "b0f8c01f",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365dd8f1",
+   "id": "821c95c9",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa0a76e",
+   "id": "d93871c1",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "792a0897",
+   "id": "d7867520",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e559704d",
+   "id": "a5df2647",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d0de65dc",
+   "id": "41d45a2e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:26.521397Z",
-     "iopub.status.busy": "2025-01-28T08:01:26.520823Z",
-     "iopub.status.idle": "2025-01-28T08:01:26.525115Z",
-     "shell.execute_reply": "2025-01-28T08:01:26.524462Z"
+     "iopub.execute_input": "2025-01-28T10:40:24.776140Z",
+     "iopub.status.busy": "2025-01-28T10:40:24.775763Z",
+     "iopub.status.idle": "2025-01-28T10:40:24.779802Z",
+     "shell.execute_reply": "2025-01-28T10:40:24.779277Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e23f158",
+   "id": "1f1e414e",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "85cd2b99",
+   "id": "56fdfd10",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:26.526933Z",
-     "iopub.status.busy": "2025-01-28T08:01:26.526560Z",
-     "iopub.status.idle": "2025-01-28T08:01:26.529634Z",
-     "shell.execute_reply": "2025-01-28T08:01:26.529132Z"
+     "iopub.execute_input": "2025-01-28T10:40:24.781721Z",
+     "iopub.status.busy": "2025-01-28T10:40:24.781222Z",
+     "iopub.status.idle": "2025-01-28T10:40:24.784234Z",
+     "shell.execute_reply": "2025-01-28T10:40:24.783682Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebfd8834",
+   "id": "16b4f904",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fc52ba89",
+   "id": "ab9c6558",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:26.531413Z",
-     "iopub.status.busy": "2025-01-28T08:01:26.531048Z",
-     "iopub.status.idle": "2025-01-28T08:01:29.165880Z",
-     "shell.execute_reply": "2025-01-28T08:01:29.165261Z"
+     "iopub.execute_input": "2025-01-28T10:40:24.786095Z",
+     "iopub.status.busy": "2025-01-28T10:40:24.785732Z",
+     "iopub.status.idle": "2025-01-28T10:40:27.402143Z",
+     "shell.execute_reply": "2025-01-28T10:40:27.401639Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a3ef1b",
+   "id": "247627b7",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c60a8c80",
+   "id": "a81009c8",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb803e5e",
+   "id": "674dac5f",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752fad7b",
+   "id": "b3579eec",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1fd45038",
+   "id": "88537fd1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:29.167916Z",
-     "iopub.status.busy": "2025-01-28T08:01:29.167544Z",
-     "iopub.status.idle": "2025-01-28T08:01:29.171117Z",
-     "shell.execute_reply": "2025-01-28T08:01:29.170636Z"
+     "iopub.execute_input": "2025-01-28T10:40:27.404155Z",
+     "iopub.status.busy": "2025-01-28T10:40:27.403946Z",
+     "iopub.status.idle": "2025-01-28T10:40:27.407585Z",
+     "shell.execute_reply": "2025-01-28T10:40:27.406922Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f59a01bf560>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb022d61c60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44dec055",
+   "id": "f6b2481e",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e18afa4f",
+   "id": "d74e5561",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eacc700e",
+   "id": "bb948993",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebb153f9",
+   "id": "547b6ac0",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "58b67b07",
+   "id": "6982f669",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:29.173035Z",
-     "iopub.status.busy": "2025-01-28T08:01:29.172622Z",
-     "iopub.status.idle": "2025-01-28T08:01:29.175616Z",
-     "shell.execute_reply": "2025-01-28T08:01:29.175031Z"
+     "iopub.execute_input": "2025-01-28T10:40:27.409527Z",
+     "iopub.status.busy": "2025-01-28T10:40:27.409174Z",
+     "iopub.status.idle": "2025-01-28T10:40:27.412367Z",
+     "shell.execute_reply": "2025-01-28T10:40:27.411732Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a48e23e6",
+   "id": "f3161712",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-28T08:01:29.177408Z",
-     "iopub.status.busy": "2025-01-28T08:01:29.177050Z",
-     "iopub.status.idle": "2025-01-28T08:01:30.231342Z",
-     "shell.execute_reply": "2025-01-28T08:01:30.230788Z"
+     "iopub.execute_input": "2025-01-28T10:40:27.414289Z",
+     "iopub.status.busy": "2025-01-28T10:40:27.413845Z",
+     "iopub.status.idle": "2025-01-28T10:40:28.462199Z",
+     "shell.execute_reply": "2025-01-28T10:40:28.461600Z"
     }
    },
    "outputs": [
